@@ -1,6 +1,8 @@
 Revision history for {{ $dist->name }}:
 
 {{$NEXT}}
+  [Incompatible Changes]
+  - Bumped minimum Perl version to v5.12, in line with the minimum Plack version.
 
 v0.2.4    2023-06-11 14:33:50+01:00 Europe/London
   [Documentation]
